--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
