--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,15 @@
 DISCOGS_TOKEN=sVSjFzhvRFGxKdEPsHBIAEmmflcGIwCooPIOlNTL
+
+REACT_APP_URL_BASE =http://admin.wakeupcall.shop
+REACT_APP_URL_LOGIN =/api/auth/local
+REACT_APP_URL_REGISTER =/api/auth/local/register
+
+REACT_APP_URL_BLOG =http://admin.wakeupcall.shop/api/blog-report
+REACT_APP_URL_VIDEO =http://admin.wakeupcall.shop/api/videos-report
+REACT_APP_URL_PODCAST =http://admin.wakeupcall.shop/api/podcast-report
+
+REACT_APP_URL_BLOGS =http://admin.wakeupcall.shop/api/blogs
+REACT_APP_URL_PODCASTS =http://admin.wakeupcall.shop/api/podcasts
+REACT_APP_URL_VIDEOS =http://admin.wakeupcall.shop/api/videos
+
+REACT_APP_URL_RADIO =https://stream.coraxonline.com/musikifm-src.mp3
