--- a/src/.env
+++ b/src/.env
@@ -4,9 +4,9 @@ REACT_APP_URL_BASE =http://admin.wakeupcall.shop
 REACT_APP_URL_LOGIN =/api/auth/local
 REACT_APP_URL_REGISTER =/api/auth/local/register
 
-REACT_APP_URL_BLOG =http://admin.wakeupcall.shop/api/blog-report
-REACT_APP_URL_VIDEO =http://admin.wakeupcall.shop/api/videos-report
-REACT_APP_URL_PODCAST =http://admin.wakeupcall.shop/api/podcast-report
+REACT_APP_URL_BLOG =/api/blog-report
+REACT_APP_URL_VIDEO =/api/videos-report
+REACT_APP_URL_PODCAST =/api/podcast-report
 
 REACT_APP_URL_BLOGS =http://admin.wakeupcall.shop/api/blogs
 REACT_APP_URL_PODCASTS =http://admin.wakeupcall.shop/api/podcasts
