--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ REACT_APP_URL_LOGIN =/api/auth/local
 REACT_APP_URL_REGISTER =/api/auth/local/register
 
 REACT_APP_URL_BLOG =/api/blog-report
-REACT_APP_URL_VIDEO =/api/videos-report
+REACT_APP_URL_VIDEO =/api/video-report
 REACT_APP_URL_PODCAST =/api/podcast-report
 
 REACT_APP_URL_BLOGS =http://admin.wakeupcall.shop/api/blogs
