--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ REACT_APP_URL_BASE =http://admin.wakeupcall.shop
 REACT_APP_URL_LOGIN =/api/auth/local
 REACT_APP_URL_REGISTER =/api/auth/local/register
 
+REACT_APP_URL_HOME = /api/hero-slider
 REACT_APP_URL_BLOG =/api/blog-report
 REACT_APP_URL_VIDEO =/api/video-report
 REACT_APP_URL_PODCAST =/api/podcast-report
