--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 DISCOGS_TOKEN=sVSjFzhvRFGxKdEPsHBIAEmmflcGIwCooPIOlNTL
 
+//http://admin.wakeupcall.shop
+//http://localhost:1337
+
 REACT_APP_URL_BASE =http://admin.wakeupcall.shop
 REACT_APP_URL_LOGIN =/api/auth/local
 REACT_APP_URL_REGISTER =/api/auth/local/register
+REACT_APP_URL_USERDATA =/api/users
 
 REACT_APP_URL_HOME = /api/hero-slider
 REACT_APP_URL_BLOG =/api/blog-report
