--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DISCOGS_TOKEN=sVSjFzhvRFGxKdEPsHBIAEmmflcGIwCooPIOlNTL
 //http://localhost:1337
 
 REACT_APP_URL_BASE =http://admin.wakeupcall.shop
+REACT_APP_URL_DATABASE =http://data.wakeupcall.shop
 REACT_APP_URL_LOGIN =/api/auth/local
 REACT_APP_URL_REGISTER =/api/auth/local/register
 REACT_APP_URL_USERDATA =/api/users
