fixed player problems, added new reverse api to env and to redux toolkit

--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ REACT_APP_URL_PODCASTS =http://admin.wakeupcall.shop/api/podcasts
 REACT_APP_URL_VIDEOS =http://admin.wakeupcall.shop/api/videos
 
 REACT_APP_URL_RADIO =https://stream.coraxonline.com/musikifm-src.mp3
+REACT_APP_URL_PODCASTREVERSE=/api/podcast-reverse
