added video home page

--- a/.env
+++ b/.env
@@ -11,8 +11,11 @@ REACT_APP_URL_USERDATA =/api/users
 
 REACT_APP_URL_HOME = /api/hero-slider
 REACT_APP_URL_BLOG =/api/blog-report
+REACT_APP_URL_BLOG_TAGS =/blog-tags
 REACT_APP_URL_VIDEO =/api/video-report
+REACT_APP_URL_VIDEO_HOMESLIDER =/api/video-slider-report
 REACT_APP_URL_PODCAST =/api/podcast-report
+REACT_APP_URL_PODCAST_TAGS =/podcast-tags
 REACT_APP_URL_PODCASTREVERSE=/api/podcast-reverse
 
 REACT_APP_URL_BLOGS =http://admin.wakeupcall.shop/api/blogs
