--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DISCOGS_TOKEN=sVSjFzhvRFGxKdEPsHBIAEmmflcGIwCooPIOlNTL
 //http://admin.wakeupcall.shop
 //http://localhost:1337
 
-REACT_APP_URL_BASE =http://admin.wakeupcall.shop
+REACT_APP_URL_ADMINBASE =http://admin.wakeupcall.shop
 REACT_APP_URL_DATABASE =http://data.wakeupcall.shop
 REACT_APP_URL_LOGIN =/api/auth/local
 REACT_APP_URL_REGISTER =/api/auth/local/register
